--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Header Logo</h1>
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <div class="header-content">
+            <h1>Header Logo</h1>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </header>
 
     <main>
