--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <header>
         <div class="header-content">
             <h1>Header Logo</h1>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
+            <nav class="header-menu">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
