refactor header and hero sections for improved layout and styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="header-content">
             <h1>Header Logo</h1>
             <nav class="header-menu">
@@ -21,7 +21,20 @@
     </header>
 
     <main>
-
+        <section class="hero">
+            <div class="hero-content">
+                <div class="left">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="right">
+                    <div class="placeholder">
+                        <p>this is a placeholder for an image</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
