--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="left">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
-                    <button>Sign up</button>
+                    <button class="main-button">Sign up</button>
                 </div>
                 <div class="right">
                     <div class="placeholder">
