refactor hero section text elements for improved styling and semantics

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="left">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+                    <h1 class="title">This website is awesome</h1>
+                    <p class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
                     <button class="main-button">Sign up</button>
                 </div>
                 <div class="right">
