--- a/index.html
+++ b/index.html
@@ -30,7 +30,32 @@
                 </div>
                 <div class="right">
                     <div class="placeholder">
-                        <p>this is a placeholder for an image</p>
+                        <p class="info">this is a placeholder for an image</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="reviews">
+            <div class="reviews-content">
+                <h1 class="title">Some random information.</h1>
+
+                <div class="reviews-info">
+                    <div class="card">
+                        <div class="box"></div>
+                        <p class="text">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="card">
+                        <div class="box"></div>
+                        <p class="text">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="card">
+                        <div class="box"></div>
+                        <p class="text">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="card">
+                        <div class="box"></div>
+                        <p class="text">this is some subtext under an illustration or image</p>
                     </div>
                 </div>
             </div>
