--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
                     <p class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
                     <button class="main-button">Sign up</button>
                 </div>
-                <div class="right">
-                    <div class="placeholder">
-                        <p class="info">this is a placeholder for an image</p>
-                    </div>
+                <div class="right">this is a placeholder for an image</div>
                 </div>
             </div>
         </section>
@@ -60,7 +57,27 @@
                 </div>
             </div>
         </section>
-    </main>
+        
+        <section class="quote">
+            <div class="quote-content">
+                <p class="text">
+                    <i>This is an insipiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe peolple will actually read it. Who knows? All I know is that looks nice.</i>
+                    <span class="author"> - Thor, God of Thunder</span>
+                </p>
+            </div>
+        </section>
+
+        <section class="cta">
+            <div class="cta-content">
+                <div class="cta-container">
+                    <div class="text">
+                        <h2>Call to action! It's time!</h2>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>             
+                </div>
+            </div>
+        </section>
 
     <footer>
 
