--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
             </div>
         </section>
 
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Copyright © The Odin Project 2021</p>
+        </div>
     </footer>
 </body>
 </html>
